force-app/main/default/objects/forcerules__Record_Assignment__e/forcerules__Record_Assignment__e.object-meta.xml
<CustomObject>
    <label>Record Assignment</label>
    <pluralLabel>Record Assignments</pluralLabel>
</CustomObject>