force-app/main/default/objects/forcerules__Record_Assignment__e/fields/forcerules__Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Rule_ID__c</fullName>
    <label>Rule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>