force-app/main/default/objects/forcerules__Record_Assignment__e/fields/forcerules__User_ID__c.field-meta.xml
<CustomField>
    <fullName>forcerules__User_ID__c</fullName>
    <label>User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>